force-app/main/default/objects/Usage_Metric__c/Usage_Metric__c.object-meta.xml
<CustomObject>
    <label>Usage Metric</label>
    <nameField>
        <displayFormat>UM-{000000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>