force-app/main/default/objects/Usage_Metric__c/fields/License_Tier__c.field-meta.xml
<CustomField>
    <fullName>License_Tier__c</fullName>
    <label>License Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>