force-app/main/default/objects/Usage_Metric__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <description>Type of billable partner activity being tracked.</description>
    <label>Metric Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI Request</fullName>
            </value>
            <value>
                <fullName>Deal Submitted</fullName>
            </value>
            <value>
                <fullName>MDF Request</fullName>
            </value>
            <value>
                <fullName>Lead Assigned</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Notification Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>