force-app/main/default/objects/Usage_Metric__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Partner account this usage event is attributed to. Optional because Notification Sent events do not always resolve to a partner account.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Usage_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>